--- a/Resturants/Cell/MenuTCell/MenuTCell.xib
+++ b/Resturants/Cell/MenuTCell/MenuTCell.xib
@@ -87,6 +87,12 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="imgMain" destination="hGW-Ps-X29" id="EZR-G1-1KC"/>
+                <outlet property="lblDescrip" destination="m0a-Ut-h0e" id="sTE-D5-Akm"/>
+                <outlet property="lblName" destination="tbI-DT-r4N" id="dSz-U5-KgF"/>
+                <outlet property="lblPrice" destination="QhK-pr-5AM" id="PrM-wu-9wO"/>
+            </connections>
             <point key="canvasLocation" x="17.557251908396946" y="43.309859154929576"/>
         </tableViewCell>
     </objects>
