--- a/Resturants/StroyBoard/Home.storyboard
+++ b/Resturants/StroyBoard/Home.storyboard
@@ -534,7 +534,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="mNq-ee-PXD">
-                                                        <rect key="frame" x="12" y="15.999999999999998" width="20" height="16.666666666666657"/>
+                                                        <rect key="frame" x="12" y="16.000000000000004" width="20" height="16.666666666666654"/>
                                                         <color key="tintColor" name="ColorBlack"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="20" id="PX1-JF-rIh"/>
@@ -1391,22 +1391,22 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="36" translatesAutoresizingMaskIntoConstraints="NO" id="c4h-nS-pvV">
-                                        <rect key="frame" x="16" y="62" width="361" height="273.66666666666669"/>
+                                        <rect key="frame" x="16" y="62" width="369" height="273.66666666666669"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="dwa-Js-taB">
-                                                <rect key="frame" x="0.0" y="0.0" width="361" height="86.333333333333329"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="369" height="86.333333333333329"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Title for the collection" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="STS-ku-FSP">
-                                                        <rect key="frame" x="0.0" y="0.0" width="361" height="19.333333333333332"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="369" height="19.333333333333332"/>
                                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                                         <color key="textColor" name="ColorWhite"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xza-YD-Kgo">
-                                                        <rect key="frame" x="0.0" y="31.333333333333371" width="361" height="55"/>
+                                                        <rect key="frame" x="0.0" y="31.333333333333371" width="369" height="55"/>
                                                         <subviews>
                                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter title for collection" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HNf-vj-HYM">
-                                                                <rect key="frame" x="16" y="0.0" width="329" height="55"/>
+                                                                <rect key="frame" x="16" y="0.0" width="337" height="55"/>
                                                                 <color key="tintColor" name="ColorLightGray"/>
                                                                 <color key="textColor" name="ColorWhite"/>
                                                                 <fontDescription key="fontDescription" name="Inter-Regular" family="Inter" pointSize="16"/>
@@ -1441,28 +1441,29 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="e0o-Xx-Gyn">
-                                                <rect key="frame" x="0.0" y="122.33333333333337" width="361" height="75.333333333333314"/>
+                                                <rect key="frame" x="0.0" y="122.33333333333337" width="369" height="75.333333333333314"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Who can see this" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wxF-Hh-7aj">
-                                                        <rect key="frame" x="0.0" y="0.0" width="361" height="19.333333333333332"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="369" height="19.333333333333332"/>
                                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                                         <color key="textColor" name="ColorWhite"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="YX9-c6-DNd">
-                                                        <rect key="frame" x="0.0" y="35.333333333333258" width="361" height="40"/>
+                                                        <rect key="frame" x="0.0" y="35.333333333333258" width="369" height="40"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4av-Mr-2xL">
-                                                                <rect key="frame" x="0.0" y="0.0" width="116.33333333333333" height="40"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="119" height="40"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="All" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cgy-Kj-xFx">
-                                                                        <rect key="frame" x="12" y="2" width="92.333333333333329" height="36"/>
+                                                                        <rect key="frame" x="12" y="2" width="95" height="36"/>
                                                                         <fontDescription key="fontDescription" name="Inter-Regular_Medium" family="Inter" pointSize="14"/>
                                                                         <color key="textColor" name="ColorBlack"/>
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dJJ-7x-Gxd">
-                                                                        <rect key="frame" x="2" y="2" width="112.33333333333333" height="36"/>
+                                                                        <rect key="frame" x="2" y="2" width="115" height="36"/>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                                         <connections>
                                                                             <action selector="ontapTypeCollection:" destination="imt-d9-nPB" eventType="touchUpInside" id="D1I-el-TCs"/>
@@ -1489,16 +1490,17 @@
                                                                 </userDefinedRuntimeAttributes>
                                                             </view>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="079-Iy-zGh">
-                                                                <rect key="frame" x="122.33333333333334" y="0.0" width="116.33333333333334" height="40"/>
+                                                                <rect key="frame" x="125" y="0.0" width="119" height="40"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Followers" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PxF-Ea-dDx">
-                                                                        <rect key="frame" x="12" y="2" width="92.333333333333329" height="36"/>
+                                                                        <rect key="frame" x="12" y="2" width="95" height="36"/>
                                                                         <fontDescription key="fontDescription" name="Inter-Regular_Medium" family="Inter" pointSize="14"/>
                                                                         <color key="textColor" name="ColorBlack"/>
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
                                                                     <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qJW-jD-z2Z">
-                                                                        <rect key="frame" x="2" y="2" width="112.33333333333333" height="36"/>
+                                                                        <rect key="frame" x="2" y="2" width="115" height="36"/>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                                         <connections>
                                                                             <action selector="ontapTypeCollection:" destination="imt-d9-nPB" eventType="touchUpInside" id="5CE-aG-WoV"/>
@@ -1525,16 +1527,17 @@
                                                                 </userDefinedRuntimeAttributes>
                                                             </view>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WUf-N5-GJi">
-                                                                <rect key="frame" x="244.66666666666671" y="0.0" width="116.33333333333334" height="40"/>
+                                                                <rect key="frame" x="250" y="0.0" width="119" height="40"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Only me" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mhs-tC-NBd">
-                                                                        <rect key="frame" x="12" y="2" width="92.333333333333329" height="36"/>
+                                                                        <rect key="frame" x="12" y="2" width="95" height="36"/>
                                                                         <fontDescription key="fontDescription" name="Inter-Regular_Medium" family="Inter" pointSize="14"/>
                                                                         <color key="textColor" name="ColorBlack"/>
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
                                                                     <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JW6-wF-U9N">
-                                                                        <rect key="frame" x="2" y="2" width="112.33333333333333" height="36"/>
+                                                                        <rect key="frame" x="2" y="2" width="115" height="36"/>
+                                                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
                                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                                         <connections>
                                                                             <action selector="ontapTypeCollection:" destination="imt-d9-nPB" eventType="touchUpInside" id="nUJ-lg-wsU"/>
@@ -1565,7 +1568,7 @@
                                                 </subviews>
                                             </stackView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fTP-Vw-DP2">
-                                                <rect key="frame" x="0.0" y="233.66666666666663" width="361" height="40"/>
+                                                <rect key="frame" x="0.0" y="233.66666666666663" width="369" height="40"/>
                                                 <color key="backgroundColor" name="ColorWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="Rhh-hR-DCI"/>
@@ -1586,7 +1589,7 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="c4h-nS-pvV" secondAttribute="trailing" constant="16" id="0Xx-jq-JvJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="c4h-nS-pvV" secondAttribute="trailing" constant="8" id="0Xx-jq-JvJ"/>
                                     <constraint firstItem="tPf-J6-6L6" firstAttribute="top" secondItem="vnC-Ut-Uyb" secondAttribute="top" constant="8" id="3Sj-Tq-9pV"/>
                                     <constraint firstItem="Stq-yG-dyW" firstAttribute="leading" secondItem="vnC-Ut-Uyb" secondAttribute="leading" constant="16" id="3hP-vh-LVm"/>
                                     <constraint firstItem="c4h-nS-pvV" firstAttribute="leading" secondItem="vnC-Ut-Uyb" secondAttribute="leading" constant="16" id="FJP-0i-XU9"/>
